Work with connection string refactored. Added schema validation

--- a/TestDB/Properties/App.config
+++ b/TestDB/Properties/App.config
@@ -5,6 +5,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
     <appSettings>
-        <add key="MySQLConnectionString" value="datasource=localhost;database=exampleapp;port=3306;username=root;password=Heslo123456*"/>
+        <add key="MySQLConnectionString" value="datasource=localhost;port=3306;username=root;password=Heslo123456*"/>
     </appSettings>
 </configuration>
