--- a/TestDB/Properties/App.config
+++ b/TestDB/Properties/App.config
@@ -1,33 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
     <configSections>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
     <appSettings>
-        <add key="MySQLConnectionString" value="datasource=localhost;port=3306;username=root;password=Heslo123456*"/>
+        <add key="MySQLConnectionString" value="datasource=localhost;port=3306;username=root;password=Heslo123456*" />
+        <add key="home" value="byst;29;53322;" />
     </appSettings>
     <log4net>
         <root>
-            <level value="ALL" />
+            <level value="error" />
             <appender-ref ref="MyAppender" />
-            <appender-ref ref="MyFileAppender" />
+            <appender-ref ref="MyFileAppender2" />
+            <appender-ref ref="MyDBAppender" />
         </root>
         <appender name="MyAppender" type="log4net.Appender.ConsoleAppender">
             <layout type="log4net.Layout.PatternLayout">
                 <conversionPattern value="%date %level %logger - %message%newline" />
             </layout>
         </appender>
-        <appender name="MyFileAppender" type="log4net.Appender.FileAppender">
+        <appender name="MyFileAppender2" type="log4net.Appender.FileAppender">
             <file value="c:/app/application.log" />
             <appendToFile value="true" />
             <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
             <layout type="log4net.Layout.PatternLayout">
-                <conversionPattern value="%date %level %logger - %message%newline" />
+                <conversionPattern value="%date %level %logger -buhehe- %message%newline" />
             </layout>
         </appender>
+        <appender name="MyDBAppender" type="log4net.Appender.ADONetAppender">
+            <bufferSize value="1" />
+            <lossy value="false" />
+            <connectionType
+                value="MySql.Data.MySqlClient.MySqlConnection, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+            <!--connectionString value="Server=my_server_ip_or_name;Database=my_db_name; Uid=my_user_name;Pwd=my_passwd;"/-->
+            <connectionString
+                value="Server=localhost;database=sakila;Uid=root;Pwd=Heslo123456*;" />
+            <commandText
+                value="INSERT INTO sakila.mylog (Message) VALUES (@message)" />
+            <parameter>
+                <parameterName value="@log_date" />
+                <dbType value="DateTime" />
+                <layout type="log4net.Layout.RawTimeStampLayout" />
+            </parameter>
+            <parameter>
+                <parameterName value="@thread" />
+                <dbType value="String" />
+                <size value="32" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%t" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@log_level" />
+                <dbType value="String" />
+                <size value="10" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%p" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@context" />
+                <dbType value="String" />
+                <size value="10" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%x" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@logger" />
+                <dbType value="String" />
+                <size value="512" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%c" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@message" />
+                <dbType value="String" />
+                <size value="4000" />
+                <layout type="log4net.Layout.PatternLayout">
+                    <conversionPattern value="%m" />
+                </layout>
+            </parameter>
+            <parameter>
+                <parameterName value="@exception" />
+                <dbType value="String" />
+                <size value="4000" />
+                <layout type="log4net.Layout.ExceptionLayout" />
+            </parameter>
+
+        </appender>
+
     </log4net>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
