Debug option for log4net added

--- a/TestDB/Properties/App.config
+++ b/TestDB/Properties/App.config
@@ -10,10 +10,11 @@
     <appSettings>
         <add key="MySQLConnectionString" value="datasource=localhost;port=3306;username=root;password=Heslo123456*" />
         <add key="home" value="byst;29;53322;" />
+        <add key="log4net.Internal.Debug" value="true"/>
     </appSettings>
     <log4net>
         <root>
-            <level value="error" />
+            <level value="all" />
             <appender-ref ref="MyAppender" />
             <appender-ref ref="MyFileAppender2" />
             <appender-ref ref="MyDBAppender" />
@@ -38,9 +39,10 @@
                 value="MySql.Data.MySqlClient.MySqlConnection, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
             <!--connectionString value="Server=my_server_ip_or_name;Database=my_db_name; Uid=my_user_name;Pwd=my_passwd;"/-->
             <connectionString
-                value="Server=localhost;database=sakila;Uid=root;Pwd=Heslo123456*;" />
-            <commandText
-                value="INSERT INTO sakila.mylog (Message) VALUES (@message)" />
+                value="Server=localhost;Port=3306;database=sakila;Uid=root;Pwd=Heslo123456*;" />
+            <commandText value="INSERT INTO mylog (Date,Thread,Level,Logger,Message,Exception)  VALUES(@log_date,@thread,@log_level,@logger,@message,@exception)" />
+            <commandType value="Text"/>
+            
             <parameter>
                 <parameterName value="@log_date" />
                 <dbType value="DateTime" />
